maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:50: error: ')' expected but 'else' found.
    else {gauche();avance();virages+=1}
    ^